# gemma4-for-DReye

./: .gitmodules  CMakeLists.txt  README.md  download_model.ps1  download_model.sh  main.cpp
android/: CMakeLists.txt  jni_bridge.cpp
core/: inference_engine.cpp  inference_engine.h
scripts/: build_android.sh
